<resources>
    <string name="app_name">Travel Journal</string>
    <string name="trip">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="save">Save</string>
    <string name="rating">Rating</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="city_break">City break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="prize_eur">Prize(EUR)</string>
    <string name="trip_type">Trip Type</string>
    <string name="gallery_photo">Gallery photo</string>
    <string name="select">Select</string>
    <string name="take_picture">Take Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
</resources>
